--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,5 +1,20 @@
-<!-- polyner -->
+<!-- polymer -->
 <link rel="import" href="../bower_components/polymer/polymer.html">
+
+<!-- iron elements -->
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
+
+<!-- paper elements -->
+<link rel="import" href="../bower_components/paper-styles/color.html">
+<link rel="import" href="../bower_components/paper-styles/shadow.html">
+<link rel="import" href="../bower_components/paper-styles/typography.html">
+<link rel="import" href="../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 
 <!-- own elements -->
 <link rel="import" href="botomo-app.html">
+<link rel="import" href="botomo-data.html">
+<link rel="import" href="botomo-search.html">
