--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -18,3 +18,5 @@
 <link rel="import" href="botomo-app.html">
 <link rel="import" href="botomo-data.html">
 <link rel="import" href="botomo-search.html">
+<link rel="import" href="botomo-list.html">
+<link rel="import" href="botomo-list-item.html">
