--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,8 @@
   </head>
   <body>
     <!-- app -->
-    <botomo-app></botomo-app>
+    <botomo-app
+      webservice-url="localhost:3000/">
+    </botomo-app>
   </body>
 </html>
