--- a/app/elements/botomo-app.html
+++ b/app/elements/botomo-app.html
@@ -11,8 +11,7 @@
       .app__title {
         @apply(--paper-font-display2);
       }
-      .app__search {
-        @apply(--paper-font-title);
+      .app__content {
         width: 100%;
         padding: 20px;
       }
@@ -38,14 +37,20 @@
       </div>
 
       <!-- search area -->
-      <div class="app app--centering app__search">
+      <div class="app app--centering app__content">
         <botomo-search
-          on-search-request="_handleSearchRequest">
+          on-search-response="_handleSearchResponse"
+          on-search-error="_handleSearchError"
+          on-search-failed="_handleSearchFailed">
         </botomo-search>
       </div>
 
       <!-- list area -->
-
+      <div class="app app--centering app__content">
+        <botomo-list
+          id="bList">
+        </botomo-list>
+      </div>
 
       <!-- toast area -->
       <paper-toast id="infoToast" class="app__info"></paper-toast>
@@ -58,6 +63,15 @@
     Polymer({
       is: "botomo-app",
 
+      /**
+       * 
+       */
+      properties: {
+        webserviceUrl: {
+          type: String,
+          value: ""
+        }
+      },
 
       /**
        * 
@@ -68,32 +82,86 @@
       },
 
       /**
+       * BEGIN SEARCH
+       */
+      /**
        * 
        */
-      _handleSearchRequest: function(e) {
-        alert("Search Request: " + e.detail.msg);
-        this.$.bdRequester.request();
+      _handleSearchResponse: function(e) {
+        console.log("Search Response");
+        console.dir(e.detail);
+        /**
+         * ToDo: 
+         *  add Response Data to botomo-list
+         */
       },
+      /**
+       * 
+       */
+      _handleSearchError: function(e) {
+        if (e instanceof Event) {
+          this._showMessage(e.detail.detail.error.message);
+        }
+        /**
+         * ToDo:
+         *  handle Error from Backend
+         */
+      },
+      /**
+       * 
+       */
+      _handleSearchFailed: function(e) {
+        this._showMessage(e.detail.msg);
+      },
+      /**
+       * END SEARCH
+       */
 
+      /**
+       * BEGIN APP
+       */
       /**
        * 
        */
       _handleRequestResponse: function(e) {
-
+        console.log("Ready Response");
+        console.dir(e.detail);
+        /**
+         * ToDo:
+         *  add Response Data to botomo-list
+         */
       },
-
       /**
        * 
        */
       _handleRequestError: function(e) {
-        
+        if (e instanceof Event) {
+          this._showMessage(e.detail.detail.error.message ? e.detail.detail.error.message : "Error to load Data!");
+          this.$.bList.setTestData();  
+        }
+        /**
+         * ToDo:
+         *  handle Error from Backend
+         */
       },
-
       /**
        * 
        */
       _handleRequestFailed: function(e) {
         this._showMessage(e.detail.msg);
+      },
+      /**
+       * END APP
+       */
+
+      /**
+       * 
+       */
+      ready: function() {
+        var options = {
+          url: this.webserviceUrl + "api/v1/books"
+        };
+        this.$.bdRequester.request(options);
       }
     });
   </script>
