--- a/app/elements/botomo-list-item.html
+++ b/app/elements/botomo-list-item.html
@@ -17,7 +17,7 @@
       <hr>
       <span>[[item.author]] - [[item.year]]</span>
       <hr>
-      <span>[[item.votes.up]] - [[item.votes.down]]</p>
+      <span>[[item.ups]] - [[item.downs]]</p>
     </paper-material>
 
   </template>
