--- a/app/elements/botomo-search.html
+++ b/app/elements/botomo-search.html
@@ -63,6 +63,16 @@
       is: "botomo-search",
       
       /**
+       * 
+       */
+      properties: {
+        webserviceUrl: {
+          type: String,
+          value: ""
+        }
+      },
+
+      /**
        *
        */
       _sendSearchRequest: function() {
