--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- app -->
     <botomo-app
-      webservice-url="localhost:3000/">
+      webservice-url="http://localhost:8080/">
     </botomo-app>
   </body>
 </html>
