--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -4,6 +4,7 @@
 <!-- iron elements -->
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 
 <!-- paper elements -->
 <link rel="import" href="../bower_components/paper-styles/color.html">
@@ -13,6 +14,7 @@
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 
 <!-- own elements -->
 <link rel="import" href="botomo-app.html">
