--- a/app/elements/botomo-list-item.html
+++ b/app/elements/botomo-list-item.html
@@ -5,33 +5,83 @@
         @apply(--layout-horizontal);
         width: 100%;
         margin-bottom: 20px;
-        padding: 10px;
-        background: #424242;
-        color: #FFFFFF;
+      }
+      .item--centering {
+        @apply(--layout-vertical);
+        @apply(--layout-center);
       }
 
       .item__left {
         @apply(--layout-vertical);
-        padding: 10px;
+        @apply(--layout-center-justified);
+        width: 25%;
+        background: #424242;
+        color: #FFFFFF;
+      }
+      .item__left--text {
+        @apply(--paper-font-headline);
+        padding: 10px 0 10px 0;
       }
 
       .item__right {
         @apply(--layout-vertical);
-        padding: 10px;
+        width: 75%;
+        padding: 10px 10px 10px 30px;
+        background: #EEEEEE;
+        color: #000000;
+      }
+      .item__right--title {
+        @apply(--paper-font-display1);
+        padding-bottom: 5px;
+      }
+      .item__right--subtitle {
+        @apply(--paper-font-headline);
+        margin-bottom: 30px;
+      }
+      .item__right--text {
+        @apply(--paper-font-subhead);
+      }
+      .item__right--text--padding {
+        padding-bottom: 5px;
       }
     </style>
 
-    <paper-material class="item" elevation="3">
+    <!-- data ares -->
+    <botomo-data 
+      id="bdRequester"
+      on-request-response="_handleRequestResponse">
+    </botomo-data>
 
-      <div class="item__left">
-        <span>[[item.ups]]</span>
-        -
-        <span>[[item.downs]]</span>
+    <!-- list item -->
+    <paper-material class="item" elevation="3">
+      <div class="item__left item--centering">
+        <paper-icon-button 
+          icon="arrow-upward" 
+          on-tap="_handleUpvote">
+        </paper-icon-button>
+        <div class="item__left--text">
+          {{_calcVotes(item.ups, item.downs)}}
+        </div>
+        <paper-icon-button 
+          icon="arrow-downward" 
+          on-tap="_handleDownvote">
+        </paper-icon-button>
       </div>
       <div class="item__right">
-        <h3>[[item.title]]</h3>
-        <h5>[[item.subtitle]]</h5>
-        <span>[[item.author]] - [[item.year]]</span>
+        <div class="item--centering">
+          <div class="item__right--title">
+            [[item.title]]
+          </div>
+          <div class="item__right--subtitle">
+            [[item.subtitle]]
+          </div>
+        </div>
+        <div class="item__right--text item__right--text--padding">
+          written by [[item.author]]
+        </div>
+        <div class="item__right--text">
+          published in [[item.year]]
+        </div>
       </div>
     </paper-material>
 
@@ -48,6 +98,36 @@
         item: {
           type: Object,
           value: {}
+        }
+      },
+
+      _calcVotes: function(ups, downs) {
+        return ups - downs;
+      },
+
+      _handleUpvote: function() {
+        var options = {
+          url: this.webserviceUrl + "api/v1/books/" + this.item.id + "/upvote",
+          method: "POST"
+        };
+        this.$.bdRequester.request(options);
+      },
+
+      _handleDownvote: function() {
+        var options = {
+          url: this.webserviceUrl + "api/v1/books/" + this.item.id + "/downvote",
+          method: "POST"
+        };
+        this.$.bdRequester.request(options);
+      },
+
+      _handleRequestResponse: function(e) {
+        var isUpvote = e.detail.detail.xhr.responseURL.indexOf("upvote");
+
+        if (isUpvote > -1) {
+          this.set("item.ups", ++this.item.ups);
+        } else {
+          this.set("item.downs", ++this.item.downs);
         }
       }
     });
