--- a/app/elements/botomo-list-item.html
+++ b/app/elements/botomo-list-item.html
@@ -95,6 +95,10 @@
        *
        */
       properties: {
+        webserviceUrl: {
+          type: String,
+          value: ""
+        },
         item: {
           type: Object,
           value: {}
