--- a/app/elements/botomo-search.html
+++ b/app/elements/botomo-search.html
@@ -30,7 +30,7 @@
       }
     </style>
 
-    <!-- data ares -->
+    <!-- data area -->
     <botomo-data 
       id="bdRequester"
       on-request-response="_handleRequestResponse">
