--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -22,3 +22,4 @@
 <link rel="import" href="botomo-search.html">
 <link rel="import" href="botomo-list.html">
 <link rel="import" href="botomo-list-item.html">
+<link rel="import" href="botomo-add.html">
