--- a/app/elements/botomo-app.html
+++ b/app/elements/botomo-app.html
@@ -128,6 +128,14 @@
         this.$.bdRequester.request(options);
       },
       /**
+       * 
+       */
+      _hideNotifyGetAll: function(msg) {
+        this.set("showAddArea", false);
+        this._showMessage("Add new Book canceled!");
+        this._getAll();
+      },
+      /**
        * END UTILS
        */
 
@@ -177,22 +185,15 @@
        * 
        */
       _handleAddRequestCanceled: function() {
-        this.set("showAddArea", false);
-        this._showMessage("Add new Book canceled!");
-        this._getAll();
+        this._hideNotifyGetAll("Add new Book canceled!");
       },
       /**
        * 
        */
       _handleAddRequestFinished: function(e) {
-        this.set("showAddArea", false);
-        this._showMessage("Add new Book finished!");
-        /**
-         * ToDo:
-         *  Add Book to List 
-         */
+        this._hideNotifyGetAll("Add new Book finished!");
         // get data
-        var book = e.detail.detail.response[0];
+        var book = e.detail.detail.detail.response;
         this.unshift("data", book);
       },
       /**
@@ -217,11 +218,13 @@
       _handleRequestError: function(e) {
         if (e instanceof Event) {
           this._showMessage(e.detail.detail.error.message ? e.detail.detail.error.message : "Error to load Data!");
+          return;
         }
         /**
          * ToDo:
          *  handle Error from Backend
          */
+        this._showMessage("Backend Error: ToDo --> get Message");
       },
       /**
        * 
