--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,6 @@
   </head>
   <body>
     <!-- app -->
-    <botomo-app
-      webservice-url="http://localhost:8080/">
-    </botomo-app>
+    <botomo-app></botomo-app>
   </body>
 </html>
