--- a/app/elements/botomo-list.html
+++ b/app/elements/botomo-list.html
@@ -1,32 +1,13 @@
-<dom-module id="botomo-list">
+<html><head></head><body><dom-module id="botomo-list">
   <template>
 
     <template is="dom-repeat" items="[[data]]">
-      <botomo-list-item 
-        webservice-url=[[webserviceUrl]] 
-        item="[[item]]">
+      <botomo-list-item webservice-url="[[webserviceUrl]]" item="[[item]]">
       </botomo-list-item>  
     </template>
 
   </template>
 
-  <script>
-    Polymer({
-      is: "botomo-list",
-      
-      /**
-       *
-       */
-      properties: {
-        webserviceUrl: {
-          type: String,
-          value: ""
-        },
-        data: {
-          type: Array,
-          value: []
-        }
-      }
-    });
-  </script>
+  <script>Polymer({is:"botomo-list",properties:{webserviceUrl:{type:String,value:""},data:{type:Array,value:[]}}});</script>
 </dom-module>
+</body></html>
