--- a/app/elements/botomo-data.html
+++ b/app/elements/botomo-data.html
@@ -1,68 +1,9 @@
-<dom-module id="botomo-data">
+<html><head></head><body><dom-module id="botomo-data">
   <template>
-    <iron-ajax
-      id="iaDataRequester"
-      handle-as="json"
-      on-response="_handleResponse"
-      on-error="_handleError">
+    <iron-ajax id="iaDataRequester" handle-as="json" on-response="_handleResponse" on-error="_handleError">
     </iron-ajax>
   </template>
 
-  <script>
-    Polymer({
-      is: "botomo-data",
-
-      /**
-       * 
-       */
-      request: function(options) {
-        if (options) {
-          // Get request options
-          var header = options.header || {
-            "Accept": "application/json",
-            "Content-Type": "application/json"
-          };
-          var method = options.method || "GET";
-          var url = options.url || "";
-          var params = options.params || {};
-          var body = options.body || {};
-          // check URL length
-          if (url.length > 0) {
-            // setup ajax request
-            this.$.iaDataRequester.headers = header;
-            this.$.iaDataRequester.method = method;
-            this.$.iaDataRequester.url = url;
-            // setup ajax request query parameters
-            if (params !== null) {
-              this.$.iaDataRequester.params = params;
-            }
-            // setup ajax request body
-            if (method !== "GET" && body !== null) {
-              this.$.iaDataRequester.body = body;
-            }
-            // send ajax request
-            this.$.iaDataRequester.generateRequest();
-          } else {
-            this.fire("request-failed", {msg: "No URL Parameter available!"});
-          }
-        } else {
-          this.fire("request-failed", {msg: "No Options Menu available!"});
-        }
-      },
-
-      /**
-       * 
-       */
-      _handleResponse: function(response) {
-        this.fire("request-response", response);
-      },
-
-      /**
-       * 
-       */
-      _handleError: function(error) {
-        this.fire("request-error", error);
-      }
-    });
-  </script>
+  <script>Polymer({is:"botomo-data",request:function(e){if(e){var a=e.header||{Accept:"application/json","Content-Type":"application/json"},t=e.method||"GET",s=e.url||"",i=e.params||{},r=e.body||{};s.length>0?(this.$.iaDataRequester.headers=a,this.$.iaDataRequester.method=t,this.$.iaDataRequester.url=s,null!==i&&(this.$.iaDataRequester.params=i),"GET"!==t&&null!==r&&(this.$.iaDataRequester.body=r),this.$.iaDataRequester.generateRequest()):this.fire("request-failed",{msg:"No URL Parameter available!"})}else this.fire("request-failed",{msg:"No Options Menu available!"})},_handleResponse:function(e){this.fire("request-response",e)},_handleError:function(e){this.fire("request-error",e)}});</script>
 </dom-module>
+</body></html>
