#8 Enable with-credentials in ajax call
- Add `with-credentials` to iron-ajax element

--- a/app/elements/botomo-data.html
+++ b/app/elements/botomo-data.html
@@ -3,6 +3,7 @@
     <iron-ajax
       id="iaDataRequester"
       handle-as="json"
+      with-credentials
       on-response="_handleResponse"
       on-error="_handleError">
     </iron-ajax>
