--- a/app/elements/botomo-app.html
+++ b/app/elements/botomo-app.html
@@ -150,7 +150,7 @@
        */
       _hideNotifyGetAll: function(msg) {
         this.set("showAddArea", false);
-        this._showMessage("Add new Book canceled!");
+        this._showMessage(msg);
         this._getAll();
       },
       /**
